Fixed: CSS flex content alignment "start" to "flex-start".

--- a/src/app/(home)/status/[id]/page.module.css
+++ b/src/app/(home)/status/[id]/page.module.css
@@ -54,7 +54,7 @@
 
 .singleSt {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   font-size: 28px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
