--- a/src/components/EditProject/style.css
+++ b/src/components/EditProject/style.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   position: relative;
   margin-top: 20px;
 }
